# facesmash-sources

./: .gitmodules  CMakeLists.txt  README.md  TODO
cmake/in/: EnTT.in
cmake/module/: FindSDL2_mixer.cmake
src/: CMakeLists.txt  main.cpp
src/common/: bag.cpp  bag.h  constants.h  ease.cpp  ease.h  types.h  util.cpp  util.h
src/component/: component.hpp
src/emotion/: emo_detector.cpp  emo_detector.h
src/event/: event.hpp
src/factory/: common.cpp  common.h  factory.cpp  factory.h  game_factory.cpp  game_factory.h  play_factory.cpp  play_factory.h  spawner.cpp  spawner.h  ui_factory.cpp  ui_factory.h
src/game/: game_env.cpp  game_env.h  game_loop.cpp  game_loop.h  game_renderer.cpp  game_renderer.h
src/input/: input_handler.h  user_input_handler.cpp  user_input_handler.h
src/locator/: locator.hpp
src/math/: math.hpp
src/process/: process_init.cpp  process_init.h  process_splash.cpp  process_splash.h
src/resource/: assets.cpp  assets.h  audio_resource.cpp  audio_resource.h  font_resource.cpp  font_resource.h  frame_resource.cpp  frame_resource.h  texture_resource.cpp  texture_resource.h
src/scene/: scene.h  scene_challenge.cpp  scene_challenge.h  scene_game.cpp  scene_game.h  scene_menu.cpp  scene_menu.h  scene_null.cpp  scene_null.h  scene_splash.cpp  scene_splash.h  scene_timer.cpp  scene_timer.h  scene_training.cpp  scene_training.h
src/service/: ads_android.cpp  ads_android.h  ads_null.cpp  ads_null.h  ads_service.h  audio_null.cpp  audio_null.h  audio_sdl.cpp  audio_sdl.h  audio_service.cpp  audio_service.h  av_muxer_android.cpp  av_muxer_android.h  av_muxer_null.cpp  av_muxer_null.h  av_muxer_service.h  av_recorder_android.cpp  av_recorder_android.h  av_recorder_null.cpp  av_recorder_null.h  av_recorder_service.h  billing_android.cpp  billing_android.h  billing_null.cpp  billing_null.h  billing_service.h  camera_android.cpp  camera_android.h  camera_desktop.cpp  camera_desktop.h  camera_mock.cpp  camera_mock.h  camera_null.cpp  camera_null.h  camera_service.h  face_bus_service.cpp  face_bus_service.h  game_services.h  game_services_android.cpp  game_services_android.h  (+18 more)
src/settings/: settings.cpp  settings.h
src/system/: achievements_system.cpp  achievements_system.h  animation_system.cpp  animation_system.h  audio_system.cpp  audio_system.h  av_recorder_system.cpp  av_recorder_system.h  billing_system.cpp  billing_system.h  bonus_system.cpp  bonus_system.h  camera_system.cpp  camera_system.h  combo_system.cpp  combo_system.h  countdown_system.cpp  countdown_system.h  debug_system.cpp  debug_system.h  destroy_later_system.cpp  destroy_later_system.h  easter_egg_system.cpp  easter_egg_system.h  face_button_system.cpp  face_button_system.h  face_modifier_system.cpp  face_modifier_system.h  face_smash_system.cpp  face_smash_system.h  face_spawner_system.cpp  face_spawner_system.h  fade_animation_system.cpp  fade_animation_system.h  frame_system.cpp  frame_system.h  hud_system.cpp  hud_system.h  item_system.cpp  item_system.h  (+34 more)
src/time/: clock.cpp  clock.h
src/types/: types.hpp
